# BetterAI

./: .gitignore  app.py  create_notebook.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
docs/: advanced_features_guide.md  data_validation.md  evaluation_framework.md  production_deployment.md
notebooks/: 01_validate_reward_model.ipynb
src/: advanced_trainer.py  cli.py  create_advanced_pairs.py  data_validator.py  evaluate_reward_model.py  evaluation_metrics.py  generate_advanced_data.py  human_evaluation.py  hyperparameter_optimization.py  model_architectures.py  model_comparison.py  optimize_hyperparameters.py  train_agent_with_ppo.py  train_reward_model.py  validate_data.py
tests/: __init__.py  test_data_validator.py
